# ollama-pdf-translator

./: .env.example  .gitignore  README.md  app.py  compress_pdf.py  main.py  pyproject.toml  requirements.txt  vercel.json
api/: app.py  index.py
public/static/: app.js  style.css
templates/: index.html  selfhost.html
